--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
         "postcss": "^8.1.14",
         "tailwindcss": "^3.2.7",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "alpinejs": "^3.11.1"
     }
 }
